# Common-Api-Genivi

./: CMakeLists.txt  sos.txt
cgen/commonapi-generator/: artifacts.xml
cgen/commonapi-generator/configuration/: config.ini
cgen/commonapi-generator/configuration/org.eclipse.osgi/: framework.info.57
cgen/commonapi-generator/configuration/org.eclipse.update/: platform.xml
cgen/commonapi-generator/features/org.genivi.commonapi.core.cli.feature_3.1.5.v201512091508/: feature.xml
cgen/commonapi_dbus_generator/: artifacts.xml
cgen/commonapi_dbus_generator/configuration/: config.ini
cgen/commonapi_dbus_generator/configuration/org.eclipse.core.runtime/: .extraData.1  .mainData.1  .table.1
cgen/commonapi_dbus_generator/configuration/org.eclipse.osgi/: framework.info.47
cgen/commonapi_dbus_generator/configuration/org.eclipse.update/: platform.xml
cgen/commonapi_dbus_generator/features/org.genivi.commonapi.console.feature_3.1.5.v201512091508/: feature.xml
cgen/commonapi_dbus_generator/features/org.genivi.commonapi.console.franca.feature_3.1.5.v201512091508/: feature.xml
fidl/: MihupLibFacadeHybrid.fidl~
src/: HelloWorldClient.cpp  HelloWorldClient.cpp~  HelloWorldService.cpp~  HelloWorldStubImpl.cpp
src-gen/v1/commonapi/: HelloWorld.hpp  HelloWorldDBusDeployment.cpp  HelloWorldDBusDeployment.hpp  HelloWorldDBusProxy.cpp  HelloWorldDBusProxy.hpp  HelloWorldDBusStubAdapter.cpp  HelloWorldDBusStubAdapter.hpp  HelloWorldProxy.hpp  HelloWorldProxyBase.hpp  HelloWorldStub.hpp  HelloWorldStubDefault.cpp  HelloWorldStubDefault.hpp
(+7 files in other folders)
